flux/apps/fluence/crd-operator/app/overlays/stage/httproute.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: crd-operator-api-open
spec:
  hostnames:
    - crd-api-open.stage-cloudless.cloudless.dev
  parentRefs:
    - name: eg-gw
      namespace: ingress
      sectionName: https
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: crd-operator-api
          port: 8080
          namespace: fluence
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: crd-operator-vm-console
spec:
  hostnames:
    - vm-console.stage-cloudless.cloudless.dev
  parentRefs:
    - name: eg-gw
      namespace: ingress
      sectionName: https
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: crd-operator-vm-console
          port: 8444
          namespace: fluence
